--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,5 +1,8 @@
 {
     "Текстовый пример":"Текстовый пример",
     "Язык":"Русский",
-    "Главная страница":"Главная страница"
+    "Главная страница":"Главная страница",
+    "Прозошла непредвиденная ошибка":"Прозошла непредвиденная ошибка",
+    "Обновить странницу":"Обновить странницу",
+    "Страница не найдена":"Страница не найдена"
 }
