--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -4,5 +4,8 @@
     "Главная страница":"Главная страница",
     "Прозошла непредвиденная ошибка":"Прозошла непредвиденная ошибка",
     "Обновить странницу":"Обновить странницу",
-    "Страница не найдена":"Страница не найдена"
+    "Страница не найдена":"Страница не найдена",
+    "Короткий язык": "Ru",
+    "Главная" :"Главная",
+    "О сайте": "О сайте"
 }
