--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -4,5 +4,9 @@
     "Главная страница":"Main page",
     "Прозошла непредвиденная ошибка":"An unexpected error occurred",
     "Обновить странницу":"Refresh the page",
-    "Страница не найдена":"Page not found"
+    "Страница не найдена":"Page not found",
+    "Короткий язык": "En",
+    "Главная" :"Main page",
+    "О сайте":"About us"
+
 }
