--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -7,6 +7,7 @@
     "Страница не найдена":"Page not found",
     "Короткий язык": "En",
     "Главная" :"Main page",
-    "О сайте":"About us"
+    "О сайте":"About us",
+    "Войти": "Sign in"
 
 }
