--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -7,5 +7,6 @@
     "Страница не найдена":"Страница не найдена",
     "Короткий язык": "Ru",
     "Главная" :"Главная",
-    "О сайте": "О сайте"
+    "О сайте": "О сайте",
+    "Войти": "Войти"
 }
